docs: created showOpeningHandler docs
